# wifi-qr-reader

./: Cargo.toml  LICENSE-MIT  README.md  flake.nix
src/: mailslot.rs  main.rs  qrcode.rs
