[package]
name = "wifi-qr-reader"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ComputerDruid/wifi-qr-reader"
license = "MIT OR Apache-2.0"

[dependencies]
bardecoder = "0.5.0"
icy_sixel = "0.1.3"
image = "0.25.8"
image_0_24 = { version = "0.24", package = "image" }
nokhwa = { version = "0.10.9", features = ["input-native"] }
percent-encoding = "2.3.2"
rqrr = "0.10.0"
shlex = "1.3.0"
